--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "paper-dashboard-react",
   "version": "1.3.0",
   "private": true,
-  "homepage": "https://ZabdielSub324.github.io/Proyecto_Alumnos",
+  "homepage": "https://zabdielsub324.github.io/Proyecto_Alumnos",
   "dependencies": {
     "@babel/core": "7.18.6",
     "bootstrap": "4.6.0",
